<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="comkiolk.github.simplecalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/first_operand_edit_text"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:textSize="48sp"/>

        <EditText
            android:id="@+id/second_operand_edit_text"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:textSize="48sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/add"
            android:textSize="48sp"/>

        <Button
            android:id="@+id/minus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/minus"
            android:textSize="48sp"/>

        <Button
            android:id="@+id/devision_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/devison"
            android:textSize="48sp"/>

        <Button
            android:id="@+id/multi_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/multi"
            android:textSize="48sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/result_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:padding="8dp"
            android:text="@string/result_button"
            android:textSize="48sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="48sp"
            />

    </LinearLayout>


</LinearLayout>
